force-app/main/default/objects/N26_Promotion__c/N26_Promotion__c.object-meta.xml
<CustomObject>
    <label>N26 Promotion</label>
    <nameField>
        <label>N26 Promotion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>N26 Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>