force-app/main/default/objects/N26_Promotion__c/fields/ATM_Fee_Discount__c.field-meta.xml
<CustomField>
    <fullName>ATM_Fee_Discount__c</fullName>
    <label>ATM Fee Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>