force-app/main/default/objects/N26_Promotion__c/fields/Card_Replacement_Cost_Discount__c.field-meta.xml
<CustomField>
    <fullName>Card_Replacement_Cost_Discount__c</fullName>
    <label>Card Replacement Cost Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>