force-app/main/default/objects/N26_Promotion__c/fields/Cost_per_Calendar_Month_Discount__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Calendar_Month_Discount__c</fullName>
    <label>Cost per Calendar Month Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>