force-app/main/default/objects/N26_Promotion__c/fields/Duration_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_Months__c</fullName>
    <label>Duration in Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>