force-app/main/default/objects/N26_Promotion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ATM_Fee_Discount__c</columns>
    <columns>Card_Replacement_Cost_Discount__c</columns>
    <columns>Cost_per_Calendar_Month_Discount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>